# ai-teams

./: .env.example  .gitattributes  .gitignore  .stignore  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  GEMINI.md  HANDOFF.md  NOTICE  PLAN_AGENTIDAD.md  PLAN_MEJORAS.md  README.md  ROADMAP_FLUJOS_Y_AGENTES.md  ROADMAP_PRODUCCION_AITEAM.md  TASKS.md  aiteam.ps1  package.json  pyproject.toml  start_ide.bat  start_ide.sh  stop_ide.bat  stop_ide.sh  task.md  walkthrough.md
.aiteam_snapshots/: manifest.json
.claude/: launch.json  settings.json
.github/: pull_request_template.md
aiteam/: __init__.py  action_routing.py  agent_session.py  autonomy.py  autotools.py  chat_policy.py  chat_runtime.py  cli.py  communication.py  compatibility_service.py  config.py  config_portability.py  config_schema.py  configuration_layers.py  context_budget.py  context_curator.py  dashboard.py  dev_lifecycle_contract.py  dev_process_registry.py  ecosystem_registry.py  ecosystem_validation.py  evidence_gate.py  execution.py  extensions.py  hiring_economics.py  installation_support.py  lead_close_policy.py  lead_control.py  lead_intake.py  lead_memory.py  learning.py  learning_registry.py  machine_doctor.py  machine_doctor_receipt.py  mailbox.py  mcp_catalog.py  mcp_manager.py  mcp_needs.py  mcp_runtime.py  memory.py  (+60 more)
api/: chat_delegate.py  chat_logic.py  chat_models.py  chat_observability.py  chat_preplan.py  chat_quality.py  chat_replan.py  check_frontend.py  main.py  utils.py
benchmarks/: profile_selector_cases.json
config/: adapters.example.json  agents.example.json  configuration_layers.v1.json  control_plane.example.json  dev_lifecycle.v1.json  ecosystem_registry.v1.schema.json  ecosystems.v1.json  installation_support.v1.json  machine_doctor.v1.schema.json  machine_doctor_receipt.v1.schema.json  machine_doctor_remediation.v1.schema.json  mcp_servers.example.json  model_catalog.example.json  release_artifact.v1.json  release_artifact.v1.schema.json  release_descriptor.v1.schema.json  routing_policy.example.json  skills.library.json  skills.sources.json  tool_requests.pro.json  tool_sources.catalog.json
docs/: AGENT_FLOW_IMPROVEMENT_PLAN.md  ARCHITECTURE.md  ARCHITECTURE_PLAN.md  AUDIT_2026_03_27.md  BATCH2_SPEC.md  CHAT_UX_COMPACT_FLOW_VISION.md  CODEX_HANDOFF_2026_04_02.md  COMMUNICATION_GUIDE_FOR_DEVS.md  CONVERSATIONAL_AGENTS_PLAN.md  DECISION_LOG.md  DEEP_AUDIT_AND_IMPROVEMENTS_PHASE_2.md  DESIGN_2026_03_28.md  DESIGN_2026_05_12.md  DESIGN_COST_POLICY.md  DESIGN_ROLE_ENFORCEMENT.md  DESIGN_SELF_EXTENSION.md  ECOSYSTEM_SUPPORT_MATRIX.md  EXECUTION_QUICK_START.md  EXECUTION_SEMANTICS.md  EXTERNAL_PROJECT_RUNTIME_GAPS.md  FRONTEND_ORIENTATION_STUDY.md  GUION_DEMO_2026_04.md  HISTORY.md  INDEX.md  INSTALLATION_AND_INTEGRATION.md  INTEGRATION_GUIDE.md  INTERNAL_QUALITIES_ROADMAP.md  LEAD_ADAPTIVE_FLOW_VISION.md  LEAD_QUORUM_PROJECT_CONTEXT_VISION.md  LEARNING_REGISTRY_SCHEMA.md  LLM_CONNECTION_SYSTEM.md  MCP_CLI_SKILLS_ROADMAP.md  MIGRATION_2026_05_12.md  MIGRATION_PAPERCLIP.md  MODELOS_GRATUITOS_OPENCODE.md  MODEL_POLICY.md  MULTIMODEL_ROUTING_REFERENCE.md  NAMING_COLLISION_INVESTIGATION.md  NOTEBOOKLM_AND_LEARNING_IMPLEMENTATION.md  NOTEBOOKLM_EXECUTIVE_SUMMARY.md  (+32 more)
ide-frontend/: build_errors.txt  index.html  package-lock.json  package.json  playwright.config.ts  stylelint.config.js  tsc_errors.txt  vite.config.ts  vitest.config.ts
runtime/: adapters.json  errors.json  mcp_servers.json  model_catalog.json  notebooklm_bridge_status.json  provider_accounts.json  provider_doctor.json  provider_ops.json  provider_smoke.json  skills_registry.json  system_check.json  tool_inventory.json  tools.lock.json
scripts/: accept_posix_clean_room.py  accept_release_archive.py  accept_windows_clean_room.py  android_auditor_bridge.py  audit_context_curator_model_calibration.py  audit_cost_report_readiness.py  audit_ecosystem_ci_receipts.py  audit_installation_support.py  audit_model_catalog_drift.py  audit_model_catalog_read_model.py  audit_model_default_live_promotion.py  audit_model_evaluation_coverage.py  audit_model_flow_matrix.py  audit_opencode_negative_pool.py  audit_orientation_study_prereg.py  audit_parallel_channels.py  audit_parallel_trigger_inventory.py  audit_platform_portability.py  audit_project_db.py  benchmark_antigravity_coding_models.py  benchmark_antigravity_durable_review.py  benchmark_antigravity_role_models.py  benchmark_cli_sessions.py  benchmark_codex_luna_tier3_roles.py  benchmark_codex_terra_qa.py  benchmark_codex_terra_test_designer.py  benchmark_context_curator.py  benchmark_critical_default_roles.py  benchmark_dispatch_decision_growth.py  benchmark_integrity.py  benchmark_opencode_catalog_probe.py  benchmark_opencode_server_faults.py  benchmark_opencode_server_resilience.py  benchmark_opencode_session_isolation.py  benchmark_opencode_transport.py  benchmark_parallel_heartbeat.py  benchmark_parallel_throughput.py  benchmark_quorum_plans.py  benchmark_vs_codex.py  build_release_artifact.py  (+45 more)
skills/: context_curator.md  engineer.md  file_scout.md  lead.md  lead_executor.md  mcp_operator.md  qa.md  quorum_senior.md  reviewer.md  solo_lead.md  test_designer.md  test_runner.md  web_scout.md  worker.md
tests/: conftest.py  test_action_routing.py  test_adapter_cost.py  test_adapter_registry.py  test_api_main.py  (+230 more)
tests/fixtures/ecosystems/c_cpp_cmake_minimal/: CMakeLists.txt  fixture.json
tests/fixtures/ecosystems/c_cpp_cmake_minimal/tests/: calculator_test.cpp
(+763 files in other folders)
