[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "aiteam-hybrid"
version = "0.1.0"
description = "AI Team orchestrator with Pro-first routing and API fallback"
requires-python = ">=3.10"
dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "pydantic",
    "requests",
    "aiohttp",
    "playwright",
    "psutil",
    "python-multipart",
    "pywinpty; sys_platform == 'win32'",
]

[project.optional-dependencies]
dev = [
    "httpx",
    "pytest",
]

[project.scripts]
aiteam = "aiteam.cli:main"

[tool.setuptools.packages.find]
include = ["aiteam*"]
exclude = ["tests*", "runtime*", "docs*", "ide-frontend*", "config*", "default*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
markers = [
    "slow: tests that instantiate real orchestrators, use TestClient, or run full integration flows (deselect with '-m not slow')",
    "integration: tests that touch SQLite, filesystem, or the FastAPI app (subset of slow)",
    "unit: fast tests with no I/O and no orchestrator (complement of slow)",
]
